# gaze_capture

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  gaze.ipynb  hardware_manager.sh  pyproject.toml
drivers/2.13.2.0/: setup.sh
protos/: gaze.proto
src/gaze_capture/: __main__.py  config.py  factories.py  run.py  runner.py
src/gaze_capture/acquisition/: __init__.py  base.py  dummy.py  tobii.py
src/gaze_capture/app/: bridge.py  main_window.py  manager.py  state.py  tracker.py
src/gaze_capture/aware_command_center/: __main__.py  orchestrator.py
src/gaze_capture/aware_command_center/services/: __init__.py  base.py  gaze.py  remote.py
src/gaze_capture/aware_command_center/ui/: __init__.py  command_center.py  theme.py  widgets.py
src/gaze_capture/configs/: __init__.py  app.py
src/gaze_capture/controllers/: __init__.py  base.py  dummy.py  tobii.py
src/gaze_capture/core/: factories.py  manager.py  protocols.py  runner.py  state.py
src/gaze_capture/models/: __init__.py  gaze.py
src/gaze_capture/pipeline/: __init__.py  bundler.py  distributor.py
src/gaze_capture/recorders/: __init__.py  screen_recorder.py
src/gaze_capture/sinks/: __init__.py  base.py  csv.py  http.py  nats.py  parquet.py  zmq.py
src/gaze_capture/types/: __init__.py
src/gaze_capture/ui/: __init__.py  calibration.py  main_window.py
src/gaze_capture/utils/: clock.py  types.py
